--- a/src/scss/layout/_navigation.scss
+++ b/src/scss/layout/_navigation.scss
@@ -1,1 +1,39 @@
-// navigation.scss
+@use './../utils' as *;
+
+//메인 내비게이션
+.menu {
+  @include mobile {
+    .is--active .menu__list {
+      transform: none;
+    }
+
+    &__list{
+      background: $accent-opacity-color;
+      @include padding(20px);
+      width: 70vw;
+      height: 100vh;
+      position: fixed;
+      left: 0;
+      top: 0;
+      transform: translateX(-150%);
+    }
+
+    &__item {
+      border-bottom: 1px solid $black;
+    }
+  }
+
+  @include desktop {
+    background: $brown;
+    @at-root .menu__list {
+      @include containerMax;
+      @include paddingY(16px);
+      @include flexbox($justify: space-between);
+    }
+  }
+
+  &__link {
+    display: block;
+    @include padding(16px);
+  }
+}
