--- a/src/style/index.css
+++ b/src/style/index.css
@@ -373,7 +373,6 @@ legend {
 
 .button {
   border: 0;
-  background: transparent;
   padding-left: 1rem;
   padding-right: 1rem;
   font-size: 0.875rem;
@@ -392,7 +391,7 @@ legend {
   .button--burger {
     width: 2.25rem;
     height: 2.25rem;
-    background: blue;
+    background: transparent;
     border: 0;
     padding: 0;
     position: absolute;
@@ -496,6 +495,42 @@ legend {
   .searchForm__group .formInput {
     width: 25rem;
   }
+}
+
+@media (max-width: 767px) {
+  .menu__list {
+    background: rgba(240, 230, 140, 0.85);
+    padding: 1.25rem;
+    width: 70vw;
+    height: 100vh;
+    position: fixed;
+    left: 0;
+    top: 0;
+    transform: translateX(-150%);
+  }
+  .menu__item {
+    border-bottom: 1px solid #101010;
+  }
+}
+@media (min-width: 768px) {
+  .menu {
+    background: #988574;
+  }
+  .menu__list {
+    max-width: 64rem;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    align-items: stretch;
+  }
+}
+.menu__link {
+  display: block;
+  padding: 1rem;
 }
 
 /*# sourceMappingURL=index.css.map */
