--- a/src/scss/utils/_mixin.scss
+++ b/src/scss/utils/_mixin.scss
@@ -1,5 +1,7 @@
 @use "./../utils/unit" as *;
 
+// 포지션 관련 믹스인 ???
+
 @mixin pos {
   position: absolute;
 }
@@ -83,4 +85,40 @@
 @mixin autoMargin {
   margin-left: auto;
   margin-right: auto;
+}
+
+// 그리드 믹스인
+@mixin gridbox(
+  $column-count: 12,
+  $column-width: 1fr,
+  $row-gap: 0,
+  $column-gap: 16px
+) {
+  display: grid;
+  grid-template-columns: repeat($column-count, $column-width);
+  grid-template-rows: auto;
+  grid-column-gap: rem($column-gap);
+  grid-row-gap: rem($row-gap);
+}
+
+// ratio 믹스인
+@mixin ratio($w: 16, $h: 9) {
+  aspect-ratio: $w / $h;
+}
+
+// 반응형 콘텐츠
+@mixin respons($width: max-width, $height: auto) {
+  #{$width}: 100%;
+  height: $height;
+}
+
+@mixin textOver {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+@mixin fit($fit: cover, $posX: 50%, $posY: 50%) {
+  object-fit: $fit;
+  object-position: $posX $posY;
 }
