--- a/src/scss/utils/_sprites.scss
+++ b/src/scss/utils/_sprites.scss
@@ -1,1 +1,43 @@
-// sprite.scss
+@use "color" as var;
+@use "unit" as *;
+@use "flexbox" as *;
+
+$colors: (
+  "Book": var.$green,
+  "News": var.$yellow,
+  "Board": var.$brown,
+  "Favorite": var.$orange,
+  "Twitter": var.$blue,
+);
+
+@each $section, $color in $colors {
+  .accent#{$section} {
+    color: $color;
+  }
+}
+
+// 스프라이트 배경이미지
+.sprite {
+  min-height: rem(60px);
+  background-image: url(./../assets/images/sprite_main.png);
+  background-repeat: no-repeat;
+  padding-left: rem(64px);
+  font-size: rem(18px);
+  font-weight: 700;
+  @include flexbox(column, center);
+
+  [class*="enTitle"] {
+    font-size: rem(16px);
+    font-weight: 400;
+  }
+
+  $sprites: Book, Board, News, Favorite, Twitter;
+  $x: 0;
+  $y: 0;
+  @each $sprite in $sprites {
+    &#{$sprite} {
+      background-position: $x $y;
+    }
+    $y: $y - 115px;
+  }
+}
